# mrpt_navigation

./: .clang-format  .gitignore  .gitmodules  .travis.sh  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  clang-formatter.sh  dependencies.rosinstall  package.xml  rosdep.yaml  stack.xml
kinect_2d_scanner/: CMakeLists.txt  mainpage.dox  package.xml
kinect_2d_scanner/cfg/: KinectTo2DScans.cfg
kinect_2d_scanner/launch/: kinect_2d_scanner_test.launch  kinect_2d_scanner_test.vcg
kinect_2d_scanner/src/: CMakeLists.txt  kinect_2d_scanner_node.cpp
mrpt_bridge/: CHANGELOG.rst  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml
mrpt_bridge/include/mrpt_bridge/: GPS.h  beacon.h  image.h  imu.h  landmark.h  laser_scan.h  map.h  marker_msgs.h  mrpt_bridge.h  mrpt_log_macros.h  network_of_poses.h  point_cloud.h  point_cloud2.h  pose.h  pose_conversions.h  range.h  stereo_image.h  time.h  utils.h
mrpt_bridge/src/: GPS.cpp  beacon.cpp  image.cpp  imu.cpp  landmark.cpp  laser_scan.cpp  map.cpp  marker_msgs.cpp  network_of_poses.cpp  point_cloud.cpp  point_cloud2.cpp  pose.cpp  pose_conversions.cpp  range.cpp  stereo_image.cpp
mrpt_bridge/src/test/: test_Bridge.cpp  test_main.cpp  test_map.cpp  test_pointcloud2.cpp  test_pose.cpp  test_pose_conversions.cpp  test_time.cpp
mrpt_common/: CMakeLists.txt  README.rst  package.xml
mrpt_local_obstacles/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_local_obstacles/include/mrpt_local_obstacles/: mrpt_local_obstacles_node.hpp
mrpt_local_obstacles/launch/: demo_with_mvsim.launch  demo_with_mvsim.launch.py
mrpt_local_obstacles/src/: mrpt_local_obstacles_node.cpp
mrpt_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_localization/cfg/: Localization.cfg  Motion.cfg  RosInterface.cfg
mrpt_localization/include/: mrpt_localization_node.h  mrpt_localization_node_defaults.h
mrpt_localization/include/mrpt_localization/: mrpt_localization.h  mrpt_localization_core.h  mrpt_localization_defaults.h
mrpt_localization/launch/: demo.launch  demo_ro.launch  demo_rviz.launch  demo_rviz.rviz  multi_robot.launch  robot_r1.launch  robot_r1_rviz.rviz
mrpt_localization/src/: mrpt_localization_node.cpp  mrpt_localization_node_parameters.cpp
mrpt_localization/tutorial/: pf-localization.ini
mrpt_map/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mrpt_map/include/: .map_server_node.h.kate-swp  map_server_node.h
mrpt_map/include/mrpt_map/: map_server_node.hpp
mrpt_map/launch/: demo.launch  mrpt_map_demo.launch.py  mrpt_map_server.launch.py
mrpt_map/params/: metric-map-gridmap.ini
mrpt_map/src/: map_server_node.cpp
mrpt_map/tutorial/: map.ini
mrpt_map_server/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mrpt_map_server/launch/: mrpt_map_server.launch.py
mrpt_map_server/src/: map_server_node.cpp
mrpt_msgs/: CHANGELOG.rst  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
mrpt_msgs/msg/: GraphConstraint.msg  GraphSlamAgent.msg  GraphSlamAgents.msg  GraphSlamStats.msg  NetworkOfPoses.msg  NodeIDWithLaserScan.msg  NodeIDWithPose.msg  NodeIDWithPose_vec.msg  ObservationRangeBeacon.msg  ObservationRangeBearing.msg  Pose2DStamped.msg  SingleRangeBeaconObservation.msg  SingleRangeBearingObservation.msg
mrpt_msgs/srv/: GetCMGraph.srv
mrpt_msgs_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_msgs_bridge/src/: beacon.cpp  landmark.cpp  marker_msgs.cpp  network_of_poses.cpp
mrpt_nav_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_nav_interfaces/action/: NavigateGoal.action  NavigateWaypoints.action
mrpt_nav_interfaces/msg/: GeoreferencingMetadata.msg  NavigationFeedback.msg  NavigationFinalStatus.msg
mrpt_nav_interfaces/srv/: GetGridmapLayer.srv  GetLayers.srv  GetPointmapLayer.srv  MakePlanFromTo.srv  MakePlanTo.srv
mrpt_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_pf_localization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mrpt_pf_localization/include/: mrpt_localization_node.h  mrpt_localization_node_defaults.h  mrpt_pf_localization_node.h
mrpt_pf_localization/launch/: demo.launch  demo_2d_lidar.launch.py  demo_2d_lidar_gridmap.launch.py  demo_rviz.rviz  localization.launch.py
mrpt_pf_localization/params/: README.md  default-relocalization-pipeline.yaml  default.config.yaml  map-occgrid2d.ini
mrpt_pf_localization/src/: mrpt_localization_node.cpp  mrpt_localization_node_parameters.cpp  mrpt_pf_localization_node.cpp
mrpt_pf_localization/test/: test_pf_localization.cpp
mrpt_pointcloud_pipeline/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_pointcloud_pipeline/launch/: demo_with_mvsim.launch  demo_with_mvsim.launch.py  local-obstacles-decimation-filter.yaml  pointcloud_pipeline.launch.py
mrpt_pointcloud_pipeline/params/: final-pipeline.yaml  local-obstacles-decimation-filter.yaml  per-observation-pipeline.yaml  point-cloud-pipeline.yaml
mrpt_pointcloud_pipeline/src/: mrpt_pointcloud_pipeline_node.cpp
mrpt_rawlog/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  package.xml
mrpt_rawlog/cfg/: Motion.cfg  RawLogRecord.cfg
mrpt_rawlog/include/: rawlog_play_node.h  rawlog_play_node_defaults.h  rawlog_record_node.h  rawlog_record_node_defaults.h
mrpt_rawlog/launch/: demo_play.launch  demo_play_ekf.launch  demo_play_ekf_2d.launch  demo_play_ekf_wheeled_robot.launch  demo_play_ro.launch  demo_record.launch  demo_rosbag.launch
mrpt_rawlog/src/: rawlog_play_node.cpp  rawlog_play_node_parameters.cpp  rawlog_record_node.cpp  rawlog_record_node_parameters.cpp  rosbag2rawlog.cpp
mrpt_rawlog/tutorial/: rbpf_slam.ini  ro-localization-demo.ini  tutorial.txt
mrpt_reactivenav2d/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mrpt_reactivenav2d/launch/: reactive_nav_demo_with_mvsim.launch  reactive_nav_demo_with_mvsim.launch.py  rnav.launch.py
mrpt_reactivenav2d/params/: reactive2d_default.ini
mrpt_reactivenav2d/src/: mrpt_reactivenav2d_node.cpp
mrpt_reactivenav2d/tutorial/: reactive2d_config.ini  reactive_nav_demo_with_mvsim.rviz
(+191 files in other folders)
