<?xml version="1.0"?>
<package>
  <name>mrpt_bridge</name>
  <version>0.1.15</version>
  <description>The mrpt_bridge package</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <author email="markus.bader@tuwien.ac.at">Markus Bader</author>
  <author email="raffi.z@gmail.com">Raphael Zack</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/mrpt_bridge</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mrpt_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend> <!-- Only during BUILD: for unit tests -->
  <build_depend>libpcl-all-dev</build_depend> <!-- Only during BUILD: for unit tests -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>
  
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mrpt_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>mrpt</build_depend> <!-- Depend on mrpt system pkgs -->
  <run_depend>mrpt</run_depend> <!-- Depend on mrpt system pkgs -->
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
