<package>
    <name>mrpt_common</name>
    <version>1.00.0</version>
    <description>        
Tools related to the Mobile Robot Programming Toolkit (MRPT). 
Refer to http://wiki.ros.org/mrpt_common for further documentation.
    </description>
  <maintainer email="jose.luis@todo.todo">Jose Luis</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
    <license>BSD</license>  
    <url>http://wiki.ros.org/mrpt_common</url>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>mrpt_bridge</run_depend>
    <run_depend>mrpt_msgs</run_depend>
    <run_depend>mrpt_localization</run_depend>
    <run_depend>mrpt_map</run_depend>
    <run_depend>mrpt_rawlog</run_depend>
    <export>
        <metapackage/>
    </export>
</package>
