<?xml version="1.0"?>
<package format="2">
  <name>mrpt_local_obstacles</name>
  <version>0.1.24</version>
  <description>Maintains a local obstacle map (point cloud,
   voxels or occupancy grid) from recent sensor readings within a
   configurable time window.</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mrpt_local_obstacles</url>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt1</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrpt_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
