<?xml version="1.0"?>
<package format="3">
  <name>mrpt_local_obstacles</name>
  <version>1.0.3</version>
  <description>Maintains a local obstacle map (point cloud,
   voxels or occupancy grid) from recent sensor readings within a
   configurable time window.</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <maintainer email="shravansomashekara.rai@gmail.com">Shravan S Rai</maintainer>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>
  <author email="shravansomashekara.rai@gmail.com">Shravan S Rai</author>

  <license>BSD</license>

  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mrpt2</depend>
  <depend>mp2p_icp</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>ament_lint_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
