<?xml version="1.0"?>
<package format="2">
  <name>mrpt_local_obstacles</name>
  <version>1.0.6</version>
  <description>Maintains a local obstacle map (point cloud,
   voxels or occupancy grid) from recent sensor readings within a
   configurable time window.</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/mrpt_local_obstacles</url>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libgui</depend>
  <depend>mrpt_libtclap</depend>
  <depend>mrpt_libros_bridge</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
